{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 344,
  "lineage": "4fc44bfa-8a6c-f62c-6a47-3932159f9931",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_backend_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432",
                  "9090"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-10T20:04:34.194-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/aerial-citron-428307-c5/global/firewalls/allow-backend-internal",
            "log_config": [],
            "name": "allow-backend-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/global/networks/default",
            "priority": 1000,
            "project": "aerial-citron-428307-c5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/global/firewalls/allow-backend-internal",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "backend-secure"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_grafana_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-10T20:04:34.128-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/aerial-citron-428307-c5/global/firewalls/allow-grafana-public",
            "log_config": [],
            "name": "allow-grafana-public",
            "network": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/global/networks/default",
            "priority": 1000,
            "project": "aerial-citron-428307-c5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/global/firewalls/allow-grafana-public",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "backend-secure"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-03-10T20:04:34.995-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/aerial-citron-428307-c5/global/firewalls/allow-internal-all",
            "log_config": [],
            "name": "allow-internal-all",
            "network": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/global/networks/default",
            "priority": 1000,
            "project": "aerial-citron-428307-c5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/global/firewalls/allow-internal-all",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9092",
                  "9093",
                  "2181"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-10T20:04:34.497-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/aerial-citron-428307-c5/global/firewalls/allow-kafka",
            "log_config": [],
            "name": "allow-kafka",
            "network": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/global/networks/default",
            "priority": 1000,
            "project": "aerial-citron-428307-c5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/global/firewalls/allow-kafka",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "kafka"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_web_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-10T20:04:34.132-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/aerial-citron-428307-c5/global/firewalls/allow-web-public",
            "log_config": [],
            "name": "allow-web-public",
            "network": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/global/networks/default",
            "priority": 1000,
            "project": "aerial-citron-428307-c5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/global/firewalls/allow-web-public",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web-public"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "backend_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "postgres-data-disk",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/zones/us-west1-a/disks/postgres-data-disk"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20260310",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/zones/us-west1-a/disks/ieee-backend-node"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/aerial-citron-428307-c5/zones/us-west1-a/instances/ieee-backend-node",
            "instance_id": "8368054402717410593",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "0XAFxDQFhCQ=",
            "metadata_startup_script": "    #!/bin/bash\n    set -e\n    echo \"Initializing Secure Backend Node...\"\n\n    # Format and mount persistent disk\n    DISK_ID=\"/dev/disk/by-id/google-postgres-data-disk\"\n    MOUNT_DIR=\"/mnt/stateful_partition\"\n    \n    while [ ! -e $DISK_ID ]; do sleep 1; done\n    if ! blkid $DISK_ID; then mkfs.ext4 -m 0 -F -E lazy_itable_init=0,lazy_journal_init=0,discard $DISK_ID; fi\n    \n    mkdir -p $MOUNT_DIR\n    mount -o discard,defaults $DISK_ID $M [...]
            "name": "ieee-backend-node",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.145.85.208",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/global/networks/default",
                "network_ip": "10.138.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/regions/us-west1/subnetworks/default",
                "subnetwork_project": "aerial-citron-428307-c5"
              }
            ],
            "project": "aerial-citron-428307-c5",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/zones/us-west1-a/instances/ieee-backend-node",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "backend-secure"
            ],
            "tags_fingerprint": "O7r3FQ0pXBo=",
            "zone": "us-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "attached_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_disk.postgres_data_disk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "kafka_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260310",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/zones/us-west1-a/disks/kafka-broker"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/aerial-citron-428307-c5/zones/us-west1-a/instances/kafka-broker",
            "instance_id": "7866985285829879081",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "sZ3ZRCDhgHA=",
            "metadata_startup_script": "#!/bin/bash\nset -e\n\n# Install Java and Wget\nsudo apt-get update \u0026\u0026 sudo apt-get install -y default-jdk wget\n\n# Download Kafka (use archive URL for stability)\ncd /tmp\nwget https://archive.apache.org/dist/kafka/3.6.1/kafka_2.13-3.6.1.tgz\nsudo tar -xzf kafka_2.13-3.6.1.tgz\nsudo mv kafka_2.13-3.6.1 /opt/kafka\n\n# Get IPs for configuration\nINTERNAL_IP=$(curl -s \"http://metadata.google.internal/computeMetadata/v1/instance/network-interface [...]
            "name": "kafka-broker",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.53.72.159",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/global/networks/default",
                "network_ip": "10.138.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/regions/us-west1/subnetworks/default",
                "subnetwork_project": "aerial-citron-428307-c5"
              }
            ],
            "project": "aerial-citron-428307-c5",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/zones/us-west1-a/instances/kafka-broker",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kafka"
            ],
            "tags_fingerprint": "wyGY5uVw8b4=",
            "zone": "us-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260310",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/zones/us-west1-a/disks/ieee-web-node"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/aerial-citron-428307-c5/zones/us-west1-a/instances/ieee-web-node",
            "instance_id": "7932929973174494474",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "mjvUbV2mlLE=",
            "metadata_startup_script": "#!/bin/bash\napt-get update \u0026\u0026 apt-get install -y docker.io\n    \n# Inject IPs directly from Terraform resources\ndocker run -d --name lightweight-app --restart always -p 5000:5000 \\\n  -e DB_URL=\"postgresql://admin:supersecretpassword@10.138.0.4:5432/ieee_search\" \\\n  -e KAFKA_BROKER=\"10.138.0.3:9093\" \\\n  laskyj/ieee-flask-app:latest\n",
            "name": "ieee-web-node",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.105.103.150",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/global/networks/default",
                "network_ip": "10.138.15.235",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/regions/us-west1/subnetworks/default",
                "subnetwork_project": "aerial-citron-428307-c5"
              }
            ],
            "project": "aerial-citron-428307-c5",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/aerial-citron-428307-c5/zones/us-west1-a/instances/ieee-web-node",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web-public"
            ],
            "tags_fingerprint": "3eykMJIflnQ=",
            "zone": "us-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_disk.postgres_data_disk",
            "google_compute_instance.backend_node",
            "google_compute_instance.kafka_vm",
            "google_project_service.compute"
          ]
        }
      ]
    }
  ]
}